tests/errors/syntax/function-no-brace.fn
---
Description: Function declaration with no opening brace
Expected: compile error
---

type Broken
{
    fn test
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
